syntax = "proto3";

option csharp_namespace = "TestServiceGRPC";

package greet;

import "google/protobuf/empty.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (TableReply);

  rpc SayHelloStream (HelloRequest) returns (stream TableRow);

  rpc ChangeQuote (ChangeQuoteRequest) returns (google.protobuf.Empty);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message TableReply {
  repeated TableRow rows = 1;
}

// Represents a row in the table with dynamic columns
message TableRow {
  repeated ColumnValue columns = 1;
}

// Represents a key-value pair for each column
message ColumnValue {
  string column = 1;
  string value = 2; // You can change the type or use 'oneof' for multiple types
}

message ChangeQuoteRequest {
  string quote = 1;
}
